# netlify-config-generator

./: .pylintrc  README.md  pyproject.toml  setup.cfg
cgwain/: __init__.py  collection.py  netlify.py  types.py  widgets.py
netlifyconfig/: collection.py  netlify.py  widgets.py
test/: test_collections.py
