[metadata]
name = netlify-config-generator
version = attr: cgwain.__version__
author = Nonowazu
author_email = oowazu.nonowazu@gmail.com
description = Programatically generate netlify configuration files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requiers = >=3.10
include_package_data = True
packages = find:
install_requires = file: requirements.txt


[options.package_data]
cgwain = py.typed
