[metadata]
name = netlify-config-generator
version = attr: cgwain.__version__
author = Nonowazu
author_email = oowazu.nonowazu@gmail.com
description = Programatically generate netlify configuration files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifier =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires = file: requirements.txt


[options.package_data]
cgwain = py.typed

[options.extras_require]
dev =
    mypy==0.942
    pylint==2.13.4
    coverage[toml]==6.5.0
    black==22.10.0
